[package]
name = "sortbuf"
description = "Data structure for sorting large numbers of items"
version = "0.1.0"
license = "MIT"
authors = ["Julian Ganz <neither@nut.email>"]
edition = "2021"
keywords = ["iterator","sort","sorting"]

[dev-dependencies]
rand = "0.8"
rand_pcg = "0.3"

[[bench]]
name = "comp"
harness = false
